--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <header>
         <div class="container">
             <div class="profile-section">
-                <img src="portfolio/assets/prof-photo-v5.png" alt="Profile Picture" class="profile-img">
+                <img src="assets/prof-photo-v5.png" alt="Profile Picture" class="profile-img">
                 <div class="profile-info">
                     <h1>Keshav Agrawal</h1>
                     <p><strong>Senior Salesforce Developer and Consultant</strong></p>
